syntax = "proto3";

package com.example.ajaxonboardingproject;

message Movie {
  string title = 1;
  string description = 2;
}

message MovieResponse {
  Movie movie = 1;
}

message MovieRequest {
  Movie movie = 1;
}
