syntax = "proto3";

import "movie.proto";

message ListOfMovies{
  repeated Movie movies = 1;
}
